# cli-truncate

./: .all-contributorsrc  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: integration.rs
